Added activate account handler
