# docs/swagger.json
@@ -9,6 +9,52 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/auth/activate_account": {
+            "post": {
+                "description": "Activate account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Activate account",
+                "operationId": "Activate account",
+                "parameters": [
+                    {
+                        "description": "activate",
+                        "name": "activate",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ActivateAccountRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/authv1.ActivateAccountResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    },
+                    "503": {
+                        "description": "Service Unavailable"
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
                 "description": "Login",
@@ -152,6 +198,14 @@
         }
     },
     "definitions": {
+        "authv1.ActivateAccountResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "authv1.LoginResponse": {
             "type": "object",
             "properties": {
@@ -176,6 +230,17 @@
             "properties": {
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "entities.ActivateAccountRequest": {
+            "type": "object",
+            "required": [
+                "link"
+            ],
+            "properties": {
+                "link": {
+                    "type": "string"
                 }
             }
         },
